# filament-clock

./: .clang-format  .gitignore  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  clock_hands.c  clock_hands.h  font2x7.c  font2x7.h  font3x5.c  font3x5.h  font3x7.c  font3x7.h  led_matrix.c  led_matrix.h  main.c  nvs_config.c  oe-gpio-select.md  provisioning.c  provisioning.h  spi_shiftout.c  spi_shiftout.h  weather.c  weather.h
partition_table/: partitionTable.csv
